--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
         <div class="subheading mb-5">
           <a href="mailto:name@email.com">s.choudhuri@asu.edu</a>
         </div>
-        <p class="lead mb-5"  style="text-align: justify;">Greetings! I am a Ph.D. researcher at Arizona State University, collaborating closely with Prof. Arunabha Sen in the Laboratory for Networked Existence (NetXT Lab). A track record in Computer Vision, Image Processing, and Machine Learning has marked my academic journey. Presently, my research is primarily centered on exploring realistic Domain Adaptation scenarios, particularly those that involve varying degrees of shared label space assumptions between domains.</p>
+        <p class="lead mb-5"  style="text-align: justify;">Hi! I'm a Ph.D. candidate under the supervision of Prof. Arunabha Sen at the School of Computing and Augmented Intelligence, Arizona State University. Works in computer vision, image processing, and machine learning mark my academic track. My current research interests include multi-modal representation learning and cross-image domain generalization frameworks, considering the diverse levels of shared label space assumptions among multiple domains.</p>
 
         <!-- <p class="lead mb-5"  style="text-align: justify;">At JU, my primary focus was on contour detection and semantic segmentation problems in natural scenes, while being supervised by Professor Mita Nasipuri at CMATER lab. Currently, I am working in domain adaptation problems for image classification with a focus on a much real-world scenario, where different proportions of label-set overlaps exist between domains.</p> -->
 
-        <p class="lead mb-5">In case you like to know more or get in touch, drop me a mail or find me through the links below.
+        <p class="lead mb-5">Should you wish to learn more or connect with me, please feel free to email me or reach out via the links provided below.
         </p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/sandipan-choudhuri-760aa7125">
@@ -322,10 +322,50 @@ them by proposing novel machine-learning frameworks for RGB and near-infrared im
 	<h2 class="mb-5">Publications</h2>
 	<div class='row'>
 	    <div class="col-md-2">
+	      <h3 style="text-align:center;font-size:1.1vw">ICMLA<br>2023</h3>
+	    </div>
+	    <div class="col-md-10">
+	      <p style="font-size:large;"><strong>A Robust Negative Learning Approach to Partial Domain Adaptation Using Source Prototypes</strong></p>
+	      <p><em>S.Choudhuri, S. Adeniye, A.Sen</em></p>
+	    </div>
+
+	    <div class="col-md-2">
+	      <h3 style="text-align:center;font-size:1.1vw">ASILOMAR<br>2023</h3>
+	    </div>
+	    <div class="col-md-10">
+	      <p style="font-size:large;"><strong>Robust Class-Conditional Distribution Alignment for Partial Domain Adaptation</strong></p>
+	      <p><em>S.Choudhuri, A.Sen</em></p>
+	    </div>
+
+	    <div class="col-md-2">
+	      <h3 style="text-align:center;font-size:1.1vw">QCIT@ICC<br>2023</h3>
+	    </div>
+	    <div class="col-md-10">
+	      <p style="font-size:large;"><strong>Quantum Communication in 6G Satellite Networks: Entanglement Distribution Across Changing Topologies [In Review]</strong></p>
+	      <p><em>A. Sen, C. Sumnicht, S. Choudhuri, A. Chang, G. Xue</em></p>
+	    </div>
+
+	    <div class="col-md-2">
+	      <h3 style="text-align:center;font-size:1.1vw">HICSS<br>2023</h3>
+	    </div>
+	    <div class="col-md-10">
+	      <p style="font-size:large;"><strong>Methodologies for Selection of Optimal Sites for Renewable Energy Under a Diverse Set of Constraints and Objectives</strong></p>
+	      <p><em>A. Sen, C. Sumnicht, S. Choudhuri, S. Adeniye, A. Sen</em></p>
+	    </div>
+		
+	    <div class="col-md-2">
+	      <h3 style="text-align:center;font-size:1.1vw">AIA<br>2023</h3>
+	    </div>
+	    <div class="col-md-10">
+	      <p style="font-size:large;"><strong>Distribution Alignment Using Complement Entropy Objective and Adaptive Consensus-Based Label Refinement For Partial Domain Adaptation</strong></p>
+	      <p><em>S.Choudhuri, S. Adeniye, A.Sen</em></p>
+	    </div>
+		
+	    <div class="col-md-2">
 	      <h3 style="text-align:center;font-size:1.1vw">ASILOMAR<br>2022</h3>
 	    </div>
 	    <div class="col-md-10">
-	      <p style="font-size:large;"><strong>Domain-Invariant Feature Alignment Using Variational Inference For Partial Domain Adaptation [accepted]</strong></p>
+	      <p style="font-size:large;"><strong>Domain-Invariant Feature Alignment Using Variational Inference For Partial Domain Adaptation</strong></p>
 	      <p><em>S.Choudhuri, S. Adeniye, H Venkateswara, A.Sen</em></p>
 	    </div>
 		
