--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="subheading mb-5">
           <a href="mailto:name@email.com">s.choudhuri@asu.edu</a>
         </div>
-        <p class="lead mb-5"  style="text-align: justify;">Hi! I'm a Ph.D. candidate under the supervision of Prof. Arunabha Sen at the School of Computing and Augmented Intelligence, Arizona State University. Works in computer vision, image processing, and machine learning mark my academic track. My current research interests include multi-modal representation learning and cross-image domain generalization frameworks, considering the diverse levels of shared label space assumptions among multiple domains.</p>
+        <p class="lead mb-5"  style="text-align: justify;">Hi! I'm a Ph.D. candidate under the supervision of Prof. Arunabha Sen at the School of Computing and Augmented Intelligence, Arizona State University. Works in computer vision, image processing, and machine learning mark my academic journey. My present research interests include multi-modal representation learning and cross-image domain generalization frameworks, considering the diverse levels of shared label space assumptions among multiple domains.</p>
 
         <!-- <p class="lead mb-5"  style="text-align: justify;">At JU, my primary focus was on contour detection and semantic segmentation problems in natural scenes, while being supervised by Professor Mita Nasipuri at CMATER lab. Currently, I am working in domain adaptation problems for image classification with a focus on a much real-world scenario, where different proportions of label-set overlaps exist between domains.</p> -->
 
