--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
         <div class="subheading mb-5">
           <a href="mailto:name@email.com">s.choudhuri@asu.edu</a>
         </div>
-        <p class="lead mb-5"  style="text-align: justify;">Hi! I'm a Ph.D. candidate under the supervision of Prof. Arunabha Sen at the School of Computing and Augmented Intelligence, Arizona State University. Works in computer vision, image processing, and machine learning mark my academic journey. My present research interests include multi-modal representation learning and cross-image domain generalization frameworks, considering the diverse levels of shared label space assumptions among multiple domains.</p>
+        <p class="lead mb-5"  style="text-align: justify;">Hi! I'm a Ph.D. candidate under the supervision of Prof. Arunabha Sen at the School of Computing and Augmented Intelligence, Arizona State University. Works in computer vision, image processing, and machine learning have marked my academic journey. My present research interests include multi-modal representation learning and cross-image domain generalization frameworks, considering the diverse levels of shared label space assumptions among multiple domains.</p>
 
-        <!-- <p class="lead mb-5"  style="text-align: justify;">At JU, my primary focus was on contour detection and semantic segmentation problems in natural scenes, while being supervised by Professor Mita Nasipuri at CMATER lab. Currently, I am working in domain adaptation problems for image classification with a focus on a much real-world scenario, where different proportions of label-set overlaps exist between domains.</p> -->
+        <!-- <p class="lead mb-5"  style="text-align: justify;">At JU, my primary focus was on contour detection and semantic segmentation problems in natural scenes, while being supervised by Professor Mita Nasipuri at CMATER lab. Currently, I am working on domain adaptation problems for image classification with a focus on a much real-world scenario, where different proportions of label-set overlaps exist between domains.</p> -->
 
         <p class="lead mb-5">Should you wish to learn more or connect with me, please feel free to email me or reach out via the links provided below.
         </p>
@@ -116,12 +116,11 @@
             <h3 class="mb-0">Machine Learning Intern</h3>
             <div class="subheading mb-3">ROVICARE, USA</div>
 	    <ul>	  
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Leveraged Azure Form-Recognizer and image-processing routines to develop a framework for seamless extraction of requisite
-entities from scanned patient intake forms with 92% accuracy, expediting the decision-making process for patient intake by 64%.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Boosted patient intake performance by a factor of 27 by engineering a cloud-based machine learning framework to extract proprietary data from scanned patient records</il>
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Engineered a word localizer module using Azure Cognitive Service to render scanned patient data searchable for keywords.</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Streamlined HubSpot operations for enhancing in-house productivity: built ticketing system add-ons to analyze support 
-			    requests for actionable insights, automated contract filling through PandaDoc integration, and created workflows in deal pipelines.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Spearheaded the overhaul of ticketing and contract systems, slashing processing time by 45% and improving in-house efficiency.</il>
 	      	    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Deployed machine learning models as Python RESTful APIs on the Azure App Services with Docker runtime.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Coordinated end-to-end execution of specification gathering, model development to testing, and generating metric reports.</il>
 	    </ul>
 	  </div>
           <div class="resume-date text-md-right">
@@ -134,12 +133,9 @@ entities from scanned patient intake forms with 92% accuracy, expediting the dec
             <h3 class="mb-0">Machine Learning Intern</h3>
             <div class="subheading mb-3">INTERBIZ, USA</div>
 	    <ul>	  
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Developed a batch-parser for poorly-digitized health insurance claim forms with Google Cloud Vision API and region-proposal
-networks with an extraction accuracy of 96%, translating to an improvement in the turnaround time by 72%.</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Reduced the processing time for auto insurance collision claims by 49% through the development of category detectors and
-form-processors for the scanned estimates, using Google Document AI, Google Cloud Vision API, and deep-siamese networks.</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Built a Google Cloud Web Application with OAuth 2.0 framework authentication (conforming to HIPAA security and privacy
-standards) for secured access to healthcare documents from Google Drive and Google Cloud Storage.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Optimized claims processing by 18x via creating a bespoke document parser for scanned health/auto insurance claim forms.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Implemented a HIPAA-compliant cloud application, empowering 500+ healthcare providers with secure health record access.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Orchestrated comprehensive project scope refinement, computational methods optimization, efficacy verification, and managing stakeholder engagement for successful roll-out to operational platforms.</il>
 	    </ul>
 	  </div>
           <div class="resume-date text-md-right">
@@ -150,14 +146,11 @@ standards) for secured access to healthcare documents from Google Drive and Goog
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Research Assistant</h3>
-            <div class="subheading mb-3">NetXT LAB, USA</div>
+            <div class="subheading mb-3">NetXT LAB, Arizona State University, USA</div>
 	    <ul>	  
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Addressed the data annotation overhead by proposing transfer-learning frameworks with realistic label-set overlap assumptions
-that yielded state-of-the-art performance in the majority of adaption challenges on benchmark datasets.</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Developed an engine for forecasting future overdose incidence volumes and strategically determining optimal locations to aid
-the Arizona Health Care Cost Containment System (AHCCCS) personnel in setting up Medically Assisted Treatment
- (MAT) facilities under budgetary constraints; an initiative to combat state’s opioid crisis.</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Evaluated the effectiveness of Twitter data to monitor the opioid crisis through characterization using RoBERTa language model.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Showcased significant advancements in mitigating annotation overhead with 6+ state-of-the-art works on domain adaptation.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Designed frameworks for determining optimal treatment facility locations and gauging opioid misuse through social media chatter insights, using time series modeling and data analytics in an AHCCCS initiative to combat Arizona’s opioid crisis.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Architected a game-theoretic approach toward modeling human trafficking interdiction as part of an NSF-funded initiative.</il>
 	    </ul>
 	  </div>
           <div class="resume-date text-md-right">
@@ -168,12 +161,10 @@ the Arizona Health Care Cost Containment System (AHCCCS) personnel in setting up
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Junior Research Fellow</h3>
-            <div class="subheading mb-3">CMATER LAB, India</div>
+            <div class="subheading mb-3">CMATER LAB, Jadavpur University, India</div>
 	    <ul>	  
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Technical lead in a production-level Breast Cancer Diagnostic System development program on Fine-Needle Aspiration Cytology images; duties involved conducting research and evaluation, mentoring the development team, communicating
-with the expert groups at diagnostic units for requirements gathering, data acquisition, and configuring access controls.</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Conducted exploratory analysis on challenges of Object Localization, Contour Detection, and Image Segmentation. Addressed
-them by proposing novel machine-learning frameworks for RGB and near-infrared image datasets and publishing findings.</il>    
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Led the development of a production-level system for advanced breast cancer diagnostics, encompassing requirements gathering, data sourcing, and model architecture, resulting in a 70% reduction in diagnosis time.</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Published four benchmark works on scene labeling, contour detection, image segmentation, and object localization.</il>    
 	    </ul>
 	  </div>
           <div class="resume-date text-md-right">
