--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 		  <div><em>Dissertation: "Domain Adaptation in Unconstrained Label Spaces."</em></div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2017 - May 2023 [Tentative]</span>
+            <span class="text-primary">August 2017 - Present</span>
           </div>
         </div>
 
