--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             <h3 class="mb-0">Ph.D.</h3>
             <div class="subheading mb-3">Arizona State University, USA</div>
 		  <div>COMPUTER SCIENCE</div>
-		  <div><em>Dissertation: "Domain Adaptation in Unconstrained Label Spaces."</em></div>
+		  <div><em>Dissertation: "Exploring Unsupervised Domain Adaptation Through the Lens of Unconstrained Label-Space Overlaps."</em></div>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2017 - Present</span>
