--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#publications">Publications</a>
         </li>
-	<li class="nav-item">
+	<!--<li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
-        </li>
+        </li>-->
 	<li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#teaching">Teaching</a>
         </li>
@@ -239,12 +239,14 @@
       <div class="w-100">
         <h2 class="mb-5">Awards &#38; Services</h2>
         <ul>	  
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Served as the Webchair for the International Workshop on Network Science for Quantum Communication Networks, 2022 (NETSCIQCOM - INFOCOM). Duties involved designing, updating, and stress-testing the conference website, managing submissions, providing tech support, and reviewing workshop live streams.</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Recipient of the Engineering Graduate Fellowship for“strong academic work and research progress.”</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Recipient of the Department Travel Grants.</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Co-wrote proposals and was awarded AHCCCS Research Grant forthe Arizona State Opioid Response Data Project.</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Teaching and Research Awards reviewer forthe Graduate and Professional Student Association at Arizona State University.</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Top 0.5% of 0.25 million applicants who took the 2013 Graduate Aptitude Test in Engineering (GATE-2013) in Computer Science (conducted by the Indian Ministry of Human Resource Department).</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Doctoral Fellowship Award for “strong academic work and research progress” • Arizona State University [2022, 2023]</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Web chair • INFOCOM Workshop on Network Science for Quantum Communication Networks” [2022, 2023]</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Ph.D. Conference Travel Award • Graduate & Professional Student Association, Arizona State University [2022, 2023]</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Research award reviewer for the Graduate Grants Program • Arizona State University [2020 - 2023]</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Reviewer for IEEE journals and conferences [2018 - 2023]</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Ph.D. Conference Travel Award • School of Computing & Augmented Intelligence, Arizona State University [2019, 2022]</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Co-authored and secured NSF and AHCCCS grants for combating human trafficking and opioid crisis [2019, 2021]</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Top 0.5% among 0.25M candidates • Indian Graduate Aptitude Test in Engineering (GATE) [2013]</il>
 	</ul>      
       </div>
     </section>
