--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
 	</div>
     </section>
 
-  <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
+  <!--<section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
       <div class="w-100">
         <h2 class="mb-5">Notable Projects</h2>
 	   
@@ -547,7 +547,7 @@ colon cancer).
         </div>
 
       </div>
-    </section>
+    </section>-->
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="teaching">
       <div class="w-100">
