--- a/index.html
+++ b/index.html
@@ -554,15 +554,15 @@ colon cancer).
         <h2 class="mb-5">Teaching Assistantships</h2>
 
         <div class="subheading mb-3">Arizona State University</div>
-	    <p class="lead mb-5"  style="text-align: justify;"> Data Mining (2019) &bull;
-		Foundation of Algorithms (2018-2021) &bull;
-		Object-Oriented Programming and Data Structures (2017,2018) &bull;
-		Principles of Programming (2017)
+	    <p class="lead mb-5"  style="text-align: justify;"> Data Mining [2019, 2023] &bull;
+		Foundation of Algorithms [2017-2021] &bull;
+		Object-Oriented Programming and Data Structures [2018] &bull;
+		Introduction to Programming [2017]
 	    </p>
 
 	<div class="subheading mb-3">Jadavpur University</div>
-	    <p class="lead mb-5"  style="text-align: justify;"> Data Structures and Algorithms (2013) &bull;
-		Introduction to Programming (2015)
+	    <p class="lead mb-5"  style="text-align: justify;"> Data Structures and Algorithms [2013] &bull;
+		Introduction to Programming [2015]
 	    </p>
 
       </div>
