--- a/index.html
+++ b/index.html
@@ -235,81 +235,6 @@
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
-      <div class="w-100">
-        <h2 class="mb-5">Awards &#38; Services</h2>
-        <ul>	  
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Doctoral Fellowship Award for “strong academic work and research progress” • Arizona State University [2022, 2023]</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Web chair • INFOCOM Workshop on Network Science for Quantum Communication Networks” [2022, 2023]</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Ph.D. Conference Travel Award • Graduate & Professional Student Association, Arizona State University [2022, 2023]</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Research award reviewer for the Graduate Grants Program • Arizona State University [2020 - 2023]</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Reviewer for IEEE journals and conferences [2018 - 2023]</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Ph.D. Conference Travel Award • School of Computing & Augmented Intelligence, Arizona State University [2019, 2022]</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Co-authored and secured NSF and AHCCCS grants for combating human trafficking and opioid crisis [2019, 2021]</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Top 0.5% among 0.25M candidates • Indian Graduate Aptitude Test in Engineering (GATE) [2013]</il>
-	</ul>      
-      </div>
-    </section>
-
-    <hr class="m-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="research_interests">
-      <div class="w-100">
-        <h2 class="mb-5">Research Interests</h2>  
-	   <p class="lead mb-5"  style="text-align: justify;"> Domain Adaptation (Closed-Set/Partial/Open-Set/Source-Free) &bull;
-		Contour Detection &bull;
-		Object Localization &bull;
-		Semantic Image Segmentation &bull;
-		Unsupervised Learning &bull;
-		Time-Series Analysis
-	   </p>
-	    
-        <!--
-        <ul class="list-inline dev-icons">
-          <li class="list-inline-item">
-            <i class="fab fa-html5"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-css3-alt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-js-square"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-angular"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-react"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-node-js"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-sass"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-less"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-wordpress"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-gulp"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-grunt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-npm"></i>
-          </li>
-        </ul>
-        -->
-
-      </div>
-    </section>
-
-    <hr class="m-0">
-
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="publications">
 	<div class="w-100">
 	<h2 class="mb-5">Publications</h2>
@@ -441,13 +366,71 @@
 	      <h3 style="text-align:center;font-size:1.1vw">ICACCI<br>2016</h3>
 	    </div>
 	    <div class="col-md-10">
-	      <p style="font-size:large;"><strong>A Multi-Cue Information Based Approach to Contour Detection by Utilizing Superpixel Segmentation</strong></p>
+	      <p style="font-size:large;"><strong>A Multi-Cue Information-Based Approach to Contour Detection by Utilizing Superpixel Segmentation</strong></p>
 	      <p><em>S Choudhuri, N Das, S Ghosh, M Nasipuri</em></p>
 	    </div>
 		
 	</div>
 	</div>
     </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="research_interests">
+      <div class="w-100">
+        <h2 class="mb-5">Research Interests</h2>  
+	   <p class="lead mb-5"  style="text-align: justify;"> Domain Adaptation (Closed-Set/Partial/Open-Set/Source-Free) &bull;
+		Contour Detection &bull;
+		Object Localization &bull;
+		Semantic Image Segmentation &bull;
+		Unsupervised Learning &bull;
+		Time-Series Analysis
+	   </p>
+	    
+        <!--
+        <ul class="list-inline dev-icons">
+          <li class="list-inline-item">
+            <i class="fab fa-html5"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-css3-alt"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-js-square"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-angular"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-react"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-node-js"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-sass"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-less"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-wordpress"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-gulp"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-grunt"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-npm"></i>
+          </li>
+        </ul>
+        -->
+
+      </div>
+    </section>
+
 
   <!--<section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
       <div class="w-100">
@@ -548,6 +531,24 @@ colon cancer).
 
       </div>
     </section>-->
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
+      <div class="w-100">
+        <h2 class="mb-5">Awards &#38; Services</h2>
+        <ul>	  
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Doctoral Fellowship Award for “strong academic work and research progress” • Arizona State University [2022, 2023]</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Web chair • INFOCOM Workshop on Network Science for Quantum Communication Networks” [2022, 2023]</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Ph.D. Conference Travel Award • Graduate & Professional Student Association, Arizona State University [2022, 2023]</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Research award reviewer for the Graduate Grants Program • Arizona State University [2020 - 2023]</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Reviewer for IEEE journals and conferences [2018 - 2023]</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Ph.D. Conference Travel Award • School of Computing & Augmented Intelligence, Arizona State University [2019, 2022]</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Co-authored and secured NSF and AHCCCS grants for combating human trafficking and opioid crisis [2019, 2021]</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Top 0.5% among 0.25M candidates • Indian Graduate Aptitude Test in Engineering (GATE) [2013]</il>
+	</ul>      
+      </div>
+    </section>
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="teaching">
       <div class="w-100">
