--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="subheading mb-5">
           <a href="mailto:name@email.com">s.choudhuri@asu.edu</a>
         </div>
-        <p class="lead mb-5"  style="text-align: justify;">Hi! I'm a Ph.D. candidate under the supervision of Prof. Arunabha Sen at the School of Computing and Augmented Intelligence, Arizona State University. Works in computer vision, image processing, and machine learning have marked my academic journey. My present research interests include multi-modal representation learning and cross-image domain generalization frameworks, considering the diverse levels of shared label space assumptions among multiple domains.</p>
+        <p class="lead mb-5"  style="text-align: justify;">I'm a Ph.D. student at Arizona State University, supervised by Prof. Arunabha Sen in the School of Computing and Augmented Intelligence. Works in computer vision, image processing, and machine learning have marked my academic journey. My present research interests include multi-modal representation learning and cross-image domain generalization frameworks, considering the diverse levels of shared label space assumptions among multiple domains.</p>
 
         <!-- <p class="lead mb-5"  style="text-align: justify;">At JU, my primary focus was on contour detection and semantic segmentation problems in natural scenes, while being supervised by Professor Mita Nasipuri at CMATER lab. Currently, I am working on domain adaptation problems for image classification with a focus on a much real-world scenario, where different proportions of label-set overlaps exist between domains.</p> -->
 
@@ -441,8 +441,7 @@
           <div class="resume-content">
             <h3 class="mb-0">DOMAIN ADAPTATION FRAMEWORKS</h3>
             <div class="subheading mb-3"></div>
-		  <div style="text-align: justify;">Developed frameworks for classification tasks under a domain adaptation setup, with constrained and unconstrained label-space as-
-sumptions between the source and target domains (closed-set, partial and open-set scenarios); built adaptation models for scenarios
+		  <div style="text-align: justify;">Developed frameworks for classification tasks under a domain adaptation setup, with constrained and unconstrained label-space assumptions between the source and target domains (closed-set, partial, and open-set scenarios); built adaptation models for scenarios
 where access to source data is prohibited during the adaptation process (source-free scenario); developed generative models for cross-domain translation and data augmentation tasks.
 		  </div>
           </div>
