--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="subheading mb-5">
           <a href="mailto:name@email.com">s.choudhuri@asu.edu</a>
         </div>
-        <p class="lead mb-5"  style="text-align: justify;">I'm a Ph.D. student at Arizona State University, supervised by Prof. Arunabha Sen in the School of Computing and Augmented Intelligence. Research works in machine learning and computer vision have marked my academic journey. My present research interests include multi-modal representation learning and cross-image domain generalization frameworks, considering the diverse levels of shared label space assumptions among multiple domains.</p>
+        <p class="lead mb-5"  style="text-align: justify;">I'm a Ph.D. student at Arizona State University's School of Computing and Augmented Intelligence, under the guidance of Prof. Arunabha Sen. My research journey is marked by contributions in machine learning and computer vision. Currently, I'm exploring multi-modal representation learning and cross-image domain generalization, with an emphasis on diverse shared label space assumptions across domains.</p>
 
         <!-- <p class="lead mb-5"  style="text-align: justify;">At JU, my primary focus was on contour detection and semantic segmentation problems in natural scenes, while being supervised by Professor Mita Nasipuri at CMATER lab. Currently, I am working on domain adaptation problems for image classification with a focus on a much real-world scenario, where different proportions of label-set overlaps exist between domains.</p> -->
 
