--- a/index.html
+++ b/index.html
@@ -537,12 +537,12 @@ colon cancer).
       <div class="w-100">
         <h2 class="mb-5">Awards &#38; Services</h2>
         <ul>	  
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Doctoral Fellowship Award for “strong academic work and research progress” • Arizona State University [2022, 2023]</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Doctoral Fellowship Award for “strong academic work and research progress” • Arizona State University [2022, 2023, 2024]</il>
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Web chair • INFOCOM Workshop on Network Science for Quantum Communication Networks” [2022, 2023]</il>
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Ph.D. Conference Travel Award • Graduate & Professional Student Association, Arizona State University [2022, 2023]</il>
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Research award reviewer for the Graduate Grants Program • Arizona State University [2020 - 2023]</il>
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Reviewer for IEEE journals and conferences [2018 - 2023]</il>
-		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Ph.D. Conference Travel Award • School of Computing & Augmented Intelligence, Arizona State University [2019, 2022]</il>
+		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Ph.D. Conference Travel Award • School of Computing & Augmented Intelligence, Arizona State University [2019, 2022, 2023]</il>
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Co-authored and secured NSF and AHCCCS grants for combating human trafficking and opioid crisis [2019, 2021]</il>
 		    <li style="text-align: justify;"><i class="fa-li fa fa-check"></i>Top 0.5% among 0.25M candidates • Indian Graduate Aptitude Test in Engineering (GATE) [2013]</il>
 	</ul>      
