--- a/index.html
+++ b/index.html
@@ -203,11 +203,22 @@
 		  <div><em>Dissertation: "Exploring Unsupervised Domain Adaptation Through the Lens of Unconstrained Label-Space Overlaps."</em></div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2017 - Present</span>
+            <span class="text-primary">2024</span>
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+		<div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Masters</h3>
+            <div class="subheading mb-3">Arizona State University, USA</div>
+		  <div>COMPUTER SCIENCE</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2023</span>
+          </div>
+        </div>
+        
+		<div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Masters</h3>
             <div class="subheading mb-3">Jadavpur University, India</div>
@@ -215,7 +226,7 @@
 		  <div><em>Thesis: "A Quality-Concordance Measure-Based Approach to Edge Detection."</em></div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2013 - June 2015</span>
+            <span class="text-primary">2015</span>
           </div>
         </div>
 
@@ -226,7 +237,7 @@
             <div>COMPUTER SCIENCE &#38; ENGINEERING</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2009 - July 2013</span>
+            <span class="text-primary">2013</span>
           </div>
         </div>
 
